syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "Research.GrpcService";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
}

service SalesService {
	rpc RequestSalesData (SalesRequest) returns (stream SalesDataModel);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
  string message = 2;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

// The request message of the sale service
message SalesRequest{
	string filters = 1;
}

// The response message of the sale service
message SalesDataModel {
	int32 OrderID = 1;
	string Region = 2;
	string Country = 3;
	string ItemType=4;
	google.protobuf.Timestamp OrderDate=5;
	google.protobuf.Timestamp ShipDate=6;
	int32 UnitsSold=7;
	float UnitCost=8;
	float UnitPrice=9;
	int32 TotalRevenue=10;
	int32 TotalCost=11;
	int32 TotalProfit=12;
}
